name:                HOpenVGRaw

version:             0.1.0.0

synopsis:            Low level OpenVG / ShivaVG bindings

homepage:            https://github.com/mruegenberg/HOpenVGRaw

license:             BSD3

license-file:        LICENSE

author:              Marcel Ruegenberg

maintainer:          github@dustlab.com

category:            Graphics

build-type:          Simple

extra-source-files:  README.md

cabal-version:       >=1.8
-- >= 1.10

Flag UsePkgConfig
  Description: Use pkg-config to check for library dependencies.
  Default: False

library
  exposed-modules:     Graphics.Rendering.ShivaVG.Raw
                     , Graphics.Rendering.ShivaVG.Raw.Types
                     , Graphics.Rendering.ShivaVG.Raw.Unsafe
  other-modules:       Graphics.Rendering.ShivaVG.Raw.Internal

  hs-source-dirs:      src

  build-depends:       base >=4.6 && <4.7
                     , hmatrix >= 0.15
  build-tools:         c2hs

  if flag(UsePkgConfig)
    PkgConfig-Depends: libOpenVG
  else
    Includes: vg/openvg.h
    Extra-Libraries: OpenVG
  -- , vg/vgu.h

-- very basic test suite. mostly intended as a sample and to check for very basic functionality by just running it
Test-Suite hopenvgraw-test
  type:       exitcode-stdio-1.0
  main-is:    Main.hs
  hs-source-dirs:      test
  build-depends:       base >=4.6 && <4.7
                     , GLUT
                     , HOpenVGRaw